[package]
name = "mds"
description = "Conversion utilities for .mds & .mdf disk image files"
version = "0.1.0-alpha02"
edition = "2021"

[dependencies]
nom = "7.1.3"

[dependencies.clap]
version = "4.3.12"
default-features = false
features = ["std", "derive", "error-context", "help", "usage"]

[profile.release]
lto = true
strip = "debuginfo"
